# TODO

./: Dockerfile  README.md  pyproject.toml
API/: permissions.py  serializers.py  urls.py  views.py
tasks/: admin.py  models.py  urls.py  views.py
tasks/migrations/: 0001_create_task_models.py
templates/: base.html
templates/account/: base.html  login.html  logout.html  signup.html
templates/tasks/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_confirm_delete.html  todolist_form.html
todo/: settings.py  urls.py
users/migrations/: 0001_create_user_model.py
